Fixed comment edit size on mobile

--- a/src/app/component/comment/comment.component.scss
+++ b/src/app/component/comment/comment.component.scss
@@ -1,5 +1,7 @@
 :host {
   display: block;
+  max-width: 100vw;
+  width: 100%;
 }
 
 .comment-collapse {
@@ -13,4 +15,8 @@
 
 .comment-body {
   display: block;
+}
+
+.comment-children {
+  width: calc(100% - 5px);
 }
