--- a/src/theme/common.scss
+++ b/src/theme/common.scss
@@ -1065,10 +1065,6 @@ formly-field-radio, formly-field-multicheckbox {
   }
 }
 
-.comment-list {
-  display: grid;
-}
-
 .comment {
   margin-left: 10px;
 
